--- a/translations/kangyur/placeholders/086-001_toh490-the_tantra_the_ornament_of_the_vajra_essence.xml
+++ b/translations/kangyur/placeholders/086-001_toh490-the_tantra_the_ornament_of_the_vajra_essence.xml
@@ -9,17 +9,17 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">rdo rje snying po rgyan gyi rgyud/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Śrīvajramaṇḍālaṃkara­nāmamahātantrarājā</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">dpal rdo rje snying po rgyan zhes bya ba'i rgyud kyi rgyal po chen po/</title>
-                <title type="otherTitle" xml:lang="zh">《一切如來真性攝經》 (大正藏:《佛說一切如來真實攝大乘現證三昧大教王經》)</title>
+                <title type="otherTitle" xml:lang="zh">《金剛場莊嚴續》（大正藏：《佛說金剛場莊嚴般若波羅蜜多經中 一分》）</title>
                 <author role="translatorMain" xml:id="UT22084-086-001-1"/>
                 <author role="translatorEng" xml:id="UT22084-086-001-2">Catherine Dalton</author>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.6 <date>2024</date>
+                <edition>v 0.0.10 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-086-001"/>
                 <date/>
             </publicationStmt>
@@ -53,6 +53,21 @@
                 </change>
                 <change who="#cabie-sim" when="2024-01-30T14:42:28.519Z" type="text-version" status="0.0.6" xml:id="UT22084-086-001-8">
                     <desc>Auto (update-titles)</desc>
+                </change>
+                <change who="#cabie-sim" when="2024-04-19T09:10:34.506Z" type="text-version" status="0.0.7" xml:id="UT22084-086-001-9">
+                    <desc>Auto (update-titles)</desc>
+                </change>
+                <change who="#cabie-sim" when="2024-04-29T16:35:33.269Z" type="text-version" status="0.0.8" xml:id="UT22084-086-001-10">
+                    <desc>Auto (update-titles)</desc>
+                </change>
+                <change who="#cabie-sim" when="2024-06-12T06:46:29.998Z" type="text-version" status="0.0.9" xml:id="UT22084-086-001-11">
+                    <desc>Auto (update-titles)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-01T14:41:49.057Z" type="translation-status" status="2.h" xml:id="UT22084-086-001-12">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-01T14:41:49.057Z" type="text-version" status="0.0.10" xml:id="UT22084-086-001-13">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
