--- a/translations/tengyur/placeholders/061-004_toh2515-srivajramandalalankaramahatantrapanjika.xml
+++ b/translations/tengyur/placeholders/061-004_toh2515-srivajramandalalankaramahatantrapanjika.xml
@@ -4,20 +4,22 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title xml:lang="en" type="mainTitle">A Commentary on the Difficult Points of the Glorious “Ornament for the Vajra Essence Tantra”</title>
-                <title xml:lang="Sa-Ltn" type="mainTitle">Śrī­vajra­maṇḍālaṃkāra­mahātantra­pañjikā</title>
-                <title xml:lang="Bo-Ltn" type="mainTitle">dpal rdo rje snying po'i rgyan gyi rgyud chen po'i dka' 'grel/</title>
-                <title xml:lang="bo" type="mainTitle">དཔལ་རྡོ་རྗེ་སྙིང་པོའི་རྒྱན་གྱི་རྒྱུད་ཆེན་པོའི་དཀའ་འགྲེལ།</title>
+                <title type="mainTitle" xml:lang="en">A Commentary on the Difficult Points of the Glorious “Ornament for the Vajra Essence Tantra”</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Śrī­vajra­maṇḍālaṃkāra­mahātantra­pañjikā</title>
+                <title type="mainTitle" xml:lang="bo">དཔལ་རྡོ་རྗེ་སྙིང་པོའི་རྒྱན་གྱི་རྒྱུད་ཆེན་པོའི་དཀའ་འགྲེལ།</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">dpal rdo rje snying po'i rgyan gyi rgyud chen po'i dka' 'grel/</title>
+                <title type="otherTitle" xml:lang="zh">《金剛場莊嚴續難義釋》</title>
                 <author role="translatorMain" xml:id="UT23703-061-004-1"/>
                 <author role="translatorEng" xml:id="UT23703-061-004-2">Catherine Dalton</author>
+                <sponsor xml:id="UT23703-061-004-12">Huang Xiaoming</sponsor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.4 <date>2023</date>
+                <edition>v 0.0.8 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT23703-061-004"/>
                 <date/>
             </publicationStmt>
@@ -54,6 +56,21 @@
                 </change>
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.4" xml:id="UT23703-061-004-10">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#cabie-sim" when="2024-04-29T16:33:37.716Z" type="text-version" status="0.0.5" xml:id="UT23703-061-004-11">
+                    <desc>Auto (update-titles)</desc>
+                </change>
+                <change who="#cabie-sim" when="2024-09-12T03:44:40.694Z" type="text-version" status="0.0.6" xml:id="UT23703-061-004-13">
+                    <desc>Auto (update-sponsorship)</desc>
+                </change>
+                <change who="#cabie-sim" when="2024-09-12T07:07:33.325Z" type="text-version" status="0.0.7" xml:id="UT23703-061-004-14">
+                    <desc>Auto (update-sponsorship)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-01T14:50:24.856Z" type="translation-status" status="2.h" xml:id="UT23703-061-004-15">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-01T14:50:24.856Z" type="text-version" status="0.0.8" xml:id="UT23703-061-004-16">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
