--- a/translations/kangyur/translations/080-015_toh431_candamaharosana_the_sole_hero.xml
+++ b/translations/kangyur/translations/080-015_toh431_candamaharosana_the_sole_hero.xml
@@ -28,7 +28,7 @@
                     Doctor</consultant>
             </titleStmt>
             <editionStmt>
-                <edition>v 2.28.20 <date>2024</date>
+                <edition>v 2.28.21 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -171,6 +171,9 @@
                 </change>
                 <change who="#celso" when="2024-09-29T16:11:03.954Z" type="text-version" status="2.28.20" xml:id="UT22084-080-015-2699">
                     <desc>added milestone prefixes to appendices</desc>
+                </change>
+                <change who="#celso" when="2024-10-02T17:05:19.642Z" type="text-version" status="2.28.21" xml:id="UT22084-080-015-2700">
+                    <desc>regenerate milestones with overided prefixes</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -13153,7 +13156,7 @@ Appendix: Sanskrit text-->
                             <note type="definition">
                                 <p>
                                     <foreign type="term" xml:lang="la">Albizzia lebbeck</foreign> Benth.
-                                        (<foreign type="term" xml:lang="Sa-Ltn">Acacia Sirissa.</foreign>)</p>
+                                        (<foreign type="term" xml:lang="la">Acacia Sirissa</foreign>).</p>
                             </note>
                         </gloss>
                     </item>
