--- a/translations/kangyur/translations/087-010_toh505-the_vaiduryaprabha_dharani.xml
+++ b/translations/kangyur/translations/087-010_toh505-the_vaiduryaprabha_dharani.xml
@@ -8,7 +8,7 @@
                 <title type="mainTitle" xml:lang="Sa-Ltn">Vaiḍūrya­prabha­dharaṇī</title>
                 <title type="mainTitle" xml:lang="bo">བཻ་ཌཱུརྱའི་འོད་གྱི་གཟུངས།</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">bai DUr+ya’i ’od gyi gzungs</title>
-                <title type="longTitle" xml:lang="en">The Noble Dhāraṇī Called Vaiḍūryaprabha That
+                <title type="longTitle" xml:lang="en">The Noble Vaiḍūryaprabha Dhāraṇī That
                     Activates the Power of the Thus-Gone Ones’ Absorption</title>
                 <title type="longTitle" xml:lang="Sa-Ltn">Ārya­tathāgata­vaiḍūrya­prabha­nāma­balādhāna­samādhi­dhāraṇī</title>
                 <title type="longTitle" xml:lang="bo">འཕགས་པ་དེ་བཞིན་གཤེགས་པའི་ཏིང་ངེ་འཛིན་གྱི་སྟོབས་བསྐྱེད་པ་བཻ་ཌཱུརྱའི་འོད་ཅེས་བྱ་བའི་གཟུངས།</title>
@@ -17,8 +17,7 @@
                 <title type="otherTitle" xml:lang="en">Displaying the Emanations of the Seven
                     Thus-Gone Ones (de bzhin gshegs pab bdun gyi rnam par ’phrul pa bstan
                     pa)</title>
-                <title type="otherTitle" xml:lang="en">Pulverizing and Purifying all Karmic
-                    Obscurations (las kyi sgrib pa thams cad rnam par ’thag cing sbyong ba)</title>
+                <title type="otherTitle" xml:lang="en">Pulverizing and Purifying all Karmic Obscurations</title> <!--(las kyi sgrib pa thams cad rnam par ’thag cing sbyong ba)-->
                 <author role="translatorMain" xml:id="UT22084-087-010-1"><!--84000 Associate Translators--></author>
                 <author role="translatorEng" xml:id="UT22084-087-010-2">Adam C. Krug</author>
                 <editor role="projectEditor" xml:id="UT22084-087-010-20">Ryan Damron</editor>
@@ -29,7 +28,7 @@
                 <sponsor xml:id="UT22084-087-010-3">May, George, Likai and Lillian Gu</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.5 <date>2024</date>
+                <edition>v 1.0.6 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -197,6 +196,9 @@
                 <change who="#andre" when="2024-09-15T17:13:17.322Z" type="text-version" status="1.0.5" xml:id="UT22084-087-010-234">
                     <desc>Pratibhākūṭa corrected to pratibhānakūṭa</desc>
                 </change>
+                <change who="#john" when="2024-10-03T08:43:43.006Z" type="text-version" status="1.0.6" xml:id="UT22084-087-010-235">
+                    <desc>Long and translation section titles adjusted.</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
     </teiHeader>
@@ -290,8 +292,9 @@
         <body>
             <div type="translation" xml:id="UT22084-087-010-translation">
                 <head type="translation"> The Translation </head>
-                <head type="titleHon" tid="14">The Noble Dhāraṇī Called</head>
-                <head type="titleMain" tid="15">Vaiḍūryaprabha That Activates the Power of the
+                <head type="titleHon" tid="77">The Noble</head>
+                <head type="titleMain" tid="15">Vaiḍūryaprabha Dhāraṇī</head>
+                <head type="sub" tid="78">That Activates the Power of the
                     Thus-Gone Ones’ Absorption</head>
                 <!--In the rare case that there is initial text before the first chapter begins, the script will place the
                         text here. However, this will cause the two headings for the "Honorific Title" and "Main Title" to be duplicated below
