--- a/translations/kangyur/placeholders/090-020_toh576,932-the_incantation_of_the_perfection_of_wisdom_in_one_hundred_thousand_lines.xml
+++ b/translations/kangyur/placeholders/090-020_toh576,932-the_incantation_of_the_perfection_of_wisdom_in_one_hundred_thousand_lines.xml
@@ -9,17 +9,18 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">sher phyin stong phrag brgya pa'i gzungs/</title>
                 <title type="otherTitle" xml:lang="en">The Dhāraṇī of the Perfection of Wisdom in a Hundred Thousand Lines</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa shes rab kyi pha rol tu phyin pa stong phrag brgya pa'i gzungs/</title>
-                <author role="translatorMain" xml:id="UT22084-090-020-1"/>
+                <author role="translatorMain" xml:id="UT22084-090-020-1">Buddhapīṭha Translation Group</author>
                 <consultant role="projectManager" xml:id="UT22084-090-020-2">Péter-Dániel Szántó</consultant>
                 <author role="translatorEng" xml:id="UT22084-090-020-3">Gergely Hidas</author>
                 <author role="translatorEng" xml:id="UT22084-090-020-4">Péter-Dániel Szántó</author>
+                <editor role="projectEditor" xml:id="UT22084-090-020-21">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2024</date>
+                <edition>v 0.0.10 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-090-020"/>
                 <date/>
             </publicationStmt>
@@ -79,6 +80,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2024-09-20T07:56:05.794Z" type="text-version" status="0.0.8" xml:id="UT22084-090-020-16">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-20T07:56:38.789Z" type="text-version" status="0.0.9" xml:id="UT22084-090-020-22">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-04T08:55:28.97Z" type="translation-status" status="2.a" xml:id="UT22084-090-020-23">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-04T08:55:28.97Z" type="text-version" status="0.0.10" xml:id="UT22084-090-020-24">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
