--- a/translations/kangyur/placeholders/090-022_toh578,934-incantation_of_the_perfection_of_wisdom_in_eight_thousand_lines.xml
+++ b/translations/kangyur/placeholders/090-022_toh578,934-incantation_of_the_perfection_of_wisdom_in_eight_thousand_lines.xml
@@ -10,17 +10,18 @@
                 <title type="otherTitle" xml:lang="en">The Dhāraṇī of the Perfection of Wisdom in Eight Thousand Lines</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">sher phyin brgyad stong pa'i gzungs</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa shes rab kyi pha rol tu phyin pa brgyad stong pa'i gzungs/</title>
-                <author role="translatorMain" xml:id="UT22084-090-022-1"/>
+                <author role="translatorMain" xml:id="UT22084-090-022-1">Buddhapīṭha Translation Group</author>
                 <consultant role="projectManager" xml:id="UT22084-090-022-2">Péter-Dániel Szántó</consultant>
                 <author role="translatorEng" xml:id="UT22084-090-022-3">Gergely Hidas</author>
                 <author role="translatorEng" xml:id="UT22084-090-022-4">Péter-Dániel Szántó</author>
+                <editor role="projectEditor" xml:id="UT22084-090-022-21">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2024</date>
+                <edition>v 0.0.10 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-090-022"/>
                 <date/>
             </publicationStmt>
@@ -80,6 +81,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2024-09-20T07:58:56.721Z" type="text-version" status="0.0.8" xml:id="UT22084-090-022-16">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-20T07:59:29.431Z" type="text-version" status="0.0.9" xml:id="UT22084-090-022-22">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-04T08:59:47.003Z" type="translation-status" status="2.a" xml:id="UT22084-090-022-23">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-04T08:59:47.003Z" type="text-version" status="0.0.10" xml:id="UT22084-090-022-24">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
