--- a/translations/kangyur/placeholders/090-030_toh586,942-the_incantation_that_captures_the_samadhirajasutra.xml
+++ b/translations/kangyur/placeholders/090-030_toh586,942-the_incantation_that_captures_the_samadhirajasutra.xml
@@ -10,17 +10,18 @@
                 <title type="otherTitle" xml:lang="en">The Dhāraṇī that Captures the King of Meditative Equipoise Sūtra (samādhirājasūtra)</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa ting nge 'dzin gyi rgyal po'i mdo gzung bar 'gyur ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">ting nge 'dzin gyi rgyal po'i mdo gzung ba'i gzungs/</title>
-                <author role="translatorMain" xml:id="UT22084-090-030-1"/>
+                <author role="translatorMain" xml:id="UT22084-090-030-1">Buddhapīṭha Translation Group</author>
                 <consultant role="projectManager" xml:id="UT22084-090-030-2">Péter-Dániel Szántó</consultant>
                 <author role="translatorEng" xml:id="UT22084-090-030-3">Gergely Hidas</author>
                 <author role="translatorEng" xml:id="UT22084-090-030-4">Péter-Dániel Szántó</author>
+                <editor role="projectEditor" xml:id="UT22084-090-030-21">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2024</date>
+                <edition>v 0.0.10 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.b"/>
                 <idno xml:id="UT22084-090-030"/>
                 <date/>
             </publicationStmt>
@@ -80,6 +81,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2024-09-20T08:10:30.971Z" type="text-version" status="0.0.8" xml:id="UT22084-090-030-16">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-20T08:11:10.153Z" type="text-version" status="0.0.9" xml:id="UT22084-090-030-22">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-04T09:02:31.223Z" type="translation-status" status="2.b" xml:id="UT22084-090-030-23">
+                    <desc>2.b</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-04T09:02:31.223Z" type="text-version" status="0.0.10" xml:id="UT22084-090-030-24">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
