--- a/translations/kangyur/placeholders/090-032_toh588,944-the_incantation_that_captures_the_great_amulet.xml
+++ b/translations/kangyur/placeholders/090-032_toh588,944-the_incantation_that_captures_the_great_amulet.xml
@@ -10,17 +10,18 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa so sor 'brang ma chen mo gzung bar 'gyur ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags ma so sor 'brang ba chen mo bzung bar 'gyur ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">so sor 'brang ma chen mo gzung bar 'gyur ba'i gzungs/</title>
-                <author role="translatorMain" xml:id="UT22084-090-032-1"/>
+                <author role="translatorMain" xml:id="UT22084-090-032-1">Buddhapīṭha Translation Group</author>
                 <consultant role="projectManager" xml:id="UT22084-090-032-2">Péter-Dániel Szántó</consultant>
                 <author role="translatorEng" xml:id="UT22084-090-032-3">Gergely Hidas</author>
                 <author role="translatorEng" xml:id="UT22084-090-032-4">Péter-Dániel Szántó</author>
+                <editor role="projectEditor" xml:id="UT22084-090-032-21">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2024</date>
+                <edition>v 0.0.10 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.b"/>
                 <idno xml:id="UT22084-090-032"/>
                 <date/>
             </publicationStmt>
@@ -80,6 +81,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2024-09-20T08:12:38.204Z" type="text-version" status="0.0.8" xml:id="UT22084-090-032-16">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-20T08:13:14.092Z" type="text-version" status="0.0.9" xml:id="UT22084-090-032-22">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-04T09:05:56.735Z" type="translation-status" status="2.b" xml:id="UT22084-090-032-23">
+                    <desc>2.b</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-04T09:05:56.735Z" type="text-version" status="0.0.10" xml:id="UT22084-090-032-24">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
