--- a/translations/kangyur/placeholders/090-033_toh589,945-the_incantation_of_the_descent_to_lanka_sutra.xml
+++ b/translations/kangyur/placeholders/090-033_toh589,945-the_incantation_of_the_descent_to_lanka_sutra.xml
@@ -11,17 +11,18 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa lang kar gshegs pa'i mdo thams cad bklags par 'gyur ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">lang dkar gshegs pa'i mdo'i gzungs sngags/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa lang dkar gshegs pa'i mdo thams cad bklags par 'gyur ba'i gzungs sngags/</title>
-                <author role="translatorMain" xml:id="UT22084-090-033-1"/>
+                <author role="translatorMain" xml:id="UT22084-090-033-1">Buddhapīṭha Translation Group</author>
                 <consultant role="projectManager" xml:id="UT22084-090-033-2">Péter-Dániel Szántó</consultant>
                 <author role="translatorEng" xml:id="UT22084-090-033-3">Gergely Hidas</author>
                 <author role="translatorEng" xml:id="UT22084-090-033-4">Péter-Dániel Szántó</author>
+                <editor role="projectEditor" xml:id="UT22084-090-033-19">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.7 <date>2024</date>
+                <edition>v 0.0.9 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.b"/>
                 <idno xml:id="UT22084-090-033"/>
                 <date/>
             </publicationStmt>
@@ -75,6 +76,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2024-09-20T07:36:02.771Z" type="text-version" status="0.0.7" xml:id="UT22084-090-033-14">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-20T07:36:43.294Z" type="text-version" status="0.0.8" xml:id="UT22084-090-033-20">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-04T09:07:19.427Z" type="translation-status" status="2.b" xml:id="UT22084-090-033-21">
+                    <desc>2.b</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-04T09:07:19.427Z" type="text-version" status="0.0.9" xml:id="UT22084-090-033-22">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
