--- a/translations/kangyur/placeholders/094-017_toh740,1005-the_sutra_of_mahalaksmi.xml
+++ b/translations/kangyur/placeholders/094-017_toh740,1005-the_sutra_of_mahalaksmi.xml
@@ -7,20 +7,21 @@
                 <title type="mainTitle" xml:lang="en">The Sūtra of Mahālakṣmī</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">Mahālakṣmīsūtra</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">dpal chen mo'i mdo/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">Āryamahālakṣmīsūtra</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryamahāśrīyaḥsūtra</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryamahālakṣmīsūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa dpal chen mo'i mdo/</title>
                 <author role="translatorMain" xml:id="UT22084-094-017-6">Buddhapīṭha Translation Group</author>
                 <author role="translatorEng" xml:id="UT22084-094-017-9">Gergely Hidas</author>
                 <author role="translatorEng" xml:id="UT22084-094-017-10">Péter-Dániel Szántó</author>
                 <consultant role="projectManager" xml:id="UT22084-094-017-11">Péter-Dániel Szántó</consultant>
+                <editor role="projectEditor" xml:id="UT22084-094-017-25">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2024</date>
+                <edition>v 0.0.6 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.b"/>
                 <idno xml:id="UT22084-094-017"/>
             </publicationStmt>
             <sourceDesc>
@@ -89,6 +90,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2024-09-20T08:14:03.345Z" type="text-version" status="0.0.4" xml:id="UT22084-094-017-20">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-20T08:14:36.148Z" type="text-version" status="0.0.5" xml:id="UT22084-094-017-26">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-04T09:27:52.262Z" type="translation-status" status="2.b" xml:id="UT22084-094-017-27">
+                    <desc>2.b</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-04T09:27:52.262Z" type="text-version" status="0.0.6" xml:id="UT22084-094-017-28">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
