--- a/translations/kangyur/placeholders/079-002_toh375-the_manifesting_of_yoginis.xml
+++ b/translations/kangyur/placeholders/079-002_toh375-the_manifesting_of_yoginis.xml
@@ -23,12 +23,12 @@
                     other commentary on the same text, the Upadeśānusariṇīvyākhyā.</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2023</date>
+                <edition>v 0.0.4 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status=""/>
+                <availability status="4"/>
                 <idno xml:id="UT22084-079-002"/>
                 <date/>
             </publicationStmt>
@@ -58,6 +58,12 @@
                     <desc/>
                 </change>
                 <change who="#line-tofte" when="2023-08-03T09:36:19.23Z" type="text-version" status="0.0.3" xml:id="UT22084-079-002-5">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-04T10:07:31.662Z" type="translation-status" status="4" xml:id="UT22084-079-002-6">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-04T10:07:31.662Z" type="text-version" status="0.0.4" xml:id="UT22084-079-002-7">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
