--- a/translations/tengyur/placeholders/021-003_toh1422-yoginisamcaryanibandha.xml
+++ b/translations/tengyur/placeholders/021-003_toh1422-yoginisamcaryanibandha.xml
@@ -10,12 +10,12 @@
                 <title xml:lang="en" type="mainTitle">Explanations Connected to the Manifesting of Yogiṇīs Tantra</title>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.3 <date>2023</date>
+                <edition>v 0.0.4 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status=""/>
+                <availability status="4"/>
                 <idno xml:id="UT23703-021-003"/>
                 <date/>
             </publicationStmt>
@@ -52,6 +52,12 @@
                     <desc/>
                 </change>
                 <change who="#line-tofte" when="2023-08-03T09:37:07.569Z" type="text-version" status="0.0.3" xml:id="UT23703-021-003-9">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-04T10:08:19.358Z" type="translation-status" status="4" xml:id="UT23703-021-003-10">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-04T10:08:19.358Z" type="text-version" status="0.0.4" xml:id="UT23703-021-003-11">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
