--- a/translations/kangyur/placeholders/085-006_toh486-the_tantra_summarizing_consecration.xml
+++ b/translations/kangyur/placeholders/085-006_toh486-the_tantra_summarizing_consecration.xml
@@ -10,8 +10,12 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">rab tu gnas pa mdor bsdus pa'i rgyud/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Supratiṣṭhatantrasaṃgraha</title>
             </titleStmt>
+            <editionStmt>
+                <edition>v 0.0.1 <date>2024</date>
+                </edition>
+            </editionStmt>
             <publicationStmt>
-                <availability status=""/>
+                <availability status="4"/>
                 <idno xml:id="UT22084-085-006"/>
             </publicationStmt>
             <sourceDesc>
@@ -30,6 +34,12 @@
             
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-085-006-1">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-04T10:08:59.41Z" type="translation-status" status="4" xml:id="UT22084-085-006-2">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-04T10:08:59.41Z" type="text-version" status="0.0.1" xml:id="UT22084-085-006-3">
+                    <desc>User set version to 0.0.1</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
