--- a/translations/kangyur/placeholders/085-003_toh483-the_tantra_purifying_evil_destinies.xml
+++ b/translations/kangyur/placeholders/085-003_toh483-the_tantra_purifying_evil_destinies.xml
@@ -12,15 +12,16 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">sbyong rgyud ma/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa dgra bcom pa yang dag par rdzogs pa'i sangs rgyas ngan song thams cad yongs su sbyong ba gzi brjid kyi rgyal po'i brtag pa zhes bya ba/</title>
                 <title type="" xml:lang="zh">《清一切惡趣威光王儀軌》</title>
-                <author role="translatorMain" xml:id="UT22084-085-003-1"/>
+                <author role="translatorMain" xml:id="UT22084-085-003-1">Kris Anderson</author>
                 <author role="translatorEng" xml:id="UT22084-085-003-2">Kris Anderson</author>
+                <editor role="projectEditor" xml:id="UT22084-085-003-20">Rory Lindsay</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.11 <date>2024</date>
+                <edition>v 0.0.13 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-085-003"/>
                 <date/>
             </publicationStmt>
@@ -80,6 +81,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2024-06-24T14:28:43.729Z" type="text-version" status="0.0.11" xml:id="UT22084-085-003-17">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-24T14:29:43.21Z" type="text-version" status="0.0.12" xml:id="UT22084-085-003-21">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-07T09:40:26.9Z" type="translation-status" status="2.f" xml:id="UT22084-085-003-22">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-07T09:40:26.9Z" type="text-version" status="0.0.13" xml:id="UT22084-085-003-23">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
