--- a/translations/kangyur/placeholders/085-004_toh484-the_actions_to_be_practiced.xml
+++ b/translations/kangyur/placeholders/085-004_toh484-the_actions_to_be_practiced.xml
@@ -4,18 +4,18 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="en">The Actions to be Practiced</title>
+                <title type="mainTitle" xml:lang="en">The Coercive Activities</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">mngon spyod kyi las/</title>
                 <author role="translatorMain" xml:id="UT22084-085-004-6">Patrick Lambelet</author>
                 <author role="translatorEng" xml:id="UT22084-085-004-7">Patrick Lambelet</author>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.5 <date>2024</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-085-004"/>
                 <date/>
             </publicationStmt>
@@ -30,7 +30,9 @@
                     <idno source-id="O1JC114941JC12200" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt/>
+            <notesStmt>
+                <note type="title" date-time="2024-09-26T10:22:49.053Z" user="john">A brief section of the Sarva­durgati­pari­śodhana that had been omitted from Toh 483.</note>
+            </notesStmt>
             <revisionDesc>
                 <change who="#line-tofte" when="2021-08-26T13:21:21.927Z" type="translation-status" status="4" xml:id="UT22084-085-004-1">
                     <desc>4</desc>
@@ -54,6 +56,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2024-09-18T14:51:43.318Z" type="text-version" status="0.0.5" xml:id="UT22084-085-004-10">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#john" when="2024-09-26T10:22:49.053Z" type="text-version" status="0.0.6" xml:id="UT22084-085-004-11">
+                    <desc>Auto (update-titles)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-07T09:47:53.661Z" type="translation-status" status="2.f" xml:id="UT22084-085-004-12">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-07T09:47:53.661Z" type="text-version" status="0.0.7" xml:id="UT22084-085-004-13">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
