--- a/translations/kangyur/placeholders/068-009_toh275-the_sutra_on_buddhahood.xml
+++ b/translations/kangyur/placeholders/068-009_toh275-the_sutra_on_buddhahood.xml
@@ -4,20 +4,25 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">sangs rgyas kyi sa'i mdo/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">Buddhabhūmisūtra</title>
                 <title type="mainTitle" xml:lang="en">The Sūtra on Buddhahood</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa sangs rgyas kyi sa zhes bya ba theg pa chen po'i mdo</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Buddhabhūmisūtra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">sangs rgyas kyi sa'i mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryabuddhabhūmināmamahāyānasūtra</title>
-                <author role="translatorMain" xml:id="UT22084-068-009-1"/>
+                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa sangs rgyas kyi sa zhes bya ba theg pa chen po'i mdo</title>
+                <author role="translatorMain" xml:id="UT22084-068-009-1">Sakya Pandita Translation Group</author>
+                <consultant role="dharmaMaster" xml:id="UT22084-068-009-7">Khenpo Kalsang Gyaltsen</consultant>
+                <consultant role="projectManager" xml:id="UT22084-068-009-8">Chodrungma Kunga Chodron</consultant>
+                <author role="translatorEng" xml:id="UT22084-068-009-9">Khenpo Kalsang Gyaltsen</author>
+                <author role="translatorEng" xml:id="UT22084-068-009-10">Chodrungma Kunga Chodron</author>
+                <author role="translatorEng" xml:id="UT22084-068-009-11">Laura Goetz</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2023</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.h"/>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-068-009"/>
                 <date/>
             </publicationStmt>
@@ -45,6 +50,21 @@
                 </change>
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.3" xml:id="UT22084-068-009-5">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-15T10:54:32.773Z" type="text-version" status="0.0.4" xml:id="UT22084-068-009-12">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-02T09:17:58.582Z" type="text-version" status="0.0.5" xml:id="UT22084-068-009-13">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-02T09:20:20.679Z" type="text-version" status="0.0.6" xml:id="UT22084-068-009-14">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-07T14:25:57.348Z" type="translation-status" status="2.g" xml:id="UT22084-068-009-15">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-07T14:25:57.348Z" type="text-version" status="0.0.7" xml:id="UT22084-068-009-16">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
