--- a/translations/kangyur/placeholders/081-009_toh440-the_tantra_of_mahakala.xml
+++ b/translations/kangyur/placeholders/081-009_toh440-the_tantra_of_mahakala.xml
@@ -16,12 +16,12 @@
                 <sponsor xml:id="UT22084-081-009-4">Lina Herlintje</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.10 <date>2024</date>
+                <edition>v 0.1.11 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.f"/>
+                <availability status="2.e"/>
                 <idno xml:id="UT22084-081-009"/>
                 <date/>
             </publicationStmt>
@@ -84,6 +84,12 @@
                     <desc>2.f</desc>
                 </change>
                 <change who="#line-tofte" when="2024-08-28T13:34:57.525Z" type="text-version" status="0.1.10" xml:id="UT22084-081-009-20">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-09T11:57:58.27Z" type="translation-status" status="2.e" xml:id="UT22084-081-009-21">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-09T11:57:58.27Z" type="text-version" status="0.1.11" xml:id="UT22084-081-009-22">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
