--- a/translations/kangyur/translations/079-008_toh381-the_emergence_from_samputa.xml
+++ b/translations/kangyur/translations/079-008_toh381-the_emergence_from_samputa.xml
@@ -31,7 +31,7 @@
                 <sponsor xml:id="UT22084-079-008-9204">a sponsor who wishes to remain anonymous</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.12.10 <date>2024</date>
+                <edition>v 1.12.11 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -63,7 +63,8 @@
                 <bibl key="toh381" type="text">
                     <ref>Toh 381</ref>
                     <biblScope>Degé Kangyur, vol. 79 (rgyud ’bum, ga), folios 73.b–158.b</biblScope>
-                    <author role="translatorTib" xml:id="UT22084-079-008-9246"/>
+                    <author role="translatorTib" xml:id="UT22084-079-008-9246">Gayādhara</author>
+                    <author role="translatorTib" xml:id="UT22084-079-008-9254">Drokmi Śākya Yeshé</author>
                     <location work="UT4CZ5369" count-pages="171">
                         <volume number="79" start-page="146" end-page="316"/>
                     </location>
@@ -217,6 +218,9 @@
                 </change>
                 <change who="#celso" when="2024-09-29T16:09:05.324Z" type="text-version" status="1.12.10" xml:id="UT22084-079-008-9253">
                     <desc>added milestone prefixes to appendices</desc>
+                </change>
+                <change who="#martina-cotter" when="2024-10-09T14:36:12.548Z" type="text-version" status="1.12.11" xml:id="UT22084-079-008-9255">
+                    <desc>revision update.</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -4078,7 +4082,7 @@
                         <lg tid="503">
                             <l>“Pramohā is black in color.</l>
                             <l>She holds a skull cup, a goblet,</l>
-                            <l>A ploughshare for turning up the earth,</l>
+                            <l>A plowshare for turning up the earth,</l>
                             <l>And in her right hand she brandishes a trident. {3.1.22}</l>
                         </lg>
                         <milestone unit="chunk" xml:id="UT22084-079-008-617"/>
@@ -28766,7 +28770,7 @@
                         <p tid="4195"> iti śrīsaṃpuṭodbhavacatuḥkriyātattvarājanavamaḥ kalpaḥ || </p>
                     </div>
                 </div>
-                <div type="chapter" rend="ignoreGlossary" xml:id="UT22084-079-008-appendix-10" decls="10">
+                <div type="chapter" rend="ignoreGlossary" xml:id="UT22084-079-008-appendix-10" prefix="10">
                     <head type="chapter" tid="4196">Chapter A10</head>
                     <div type="section" xml:id="UT22084-079-008-appendix-10-1">
                         <head type="section" tid="4197">Part 1</head>
