--- a/translations/kangyur/translations/091-068_toh671-the_royal_tantra_praises_to_sridevi_kali.xml
+++ b/translations/kangyur/translations/091-068_toh671-the_royal_tantra_praises_to_sridevi_kali.xml
@@ -25,7 +25,7 @@
                 <sponsor xml:id="UT22084-091-068-13">Dakki</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2024</date>
+                <edition>v 1.0.0 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -33,7 +33,7 @@
                     <name>84000: Translating the Words of the Buddha</name> is a global
                     non-profit initiative to translate all the Buddha’s words into modern languages,
                     and to make them available to everyone. </publisher>
-                <availability status="2">
+                <availability status="1.a">
                     <licence>
                         <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
                         <p>This work is provided under the protection of a Creative Commons CC
@@ -46,7 +46,7 @@
                 <idno xml:id="UT22084-091-068"/>
                 <note>An early mistake in the assigning of UT numbers within the 84000 project means
                     that these ids diverge slightly from the standard logic.</note>
-                <date>2024-08-20</date>
+                <date>2024-10-09</date>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh671" type="text">
@@ -133,6 +133,12 @@
                 </change>
                 <change who="#konchog" when="2024-10-08T22:48:14.049Z" type="text-version" status="0.0.4" xml:id="UT22084-091-068-358">
                     <desc>Numerous fixes throughout all sections.</desc>
+                </change>
+                <change who="#martina-cotter" when="2024-10-09T21:45:14.257Z" type="translation-status" status="1.a" xml:id="UT22084-091-068-359">
+                    <desc>1.a</desc>
+                </change>
+                <change who="#martina-cotter" when="2024-10-09T21:45:14.257Z" type="text-version" status="1.0.0" xml:id="UT22084-091-068-360">
+                    <desc>First published version.</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
