--- a/translations/kangyur/translations/087-011_toh505a,1059a-mantra_for_incanting_medicines.xml
+++ b/translations/kangyur/translations/087-011_toh505a,1059a-mantra_for_incanting_medicines.xml
@@ -21,7 +21,7 @@
                 <sponsor xml:id="UT22084-087-011-71">May, George, Likai and Lillian Gu</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.8 <date>2024</date>
+                <edition>v 1.0.9 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -184,6 +184,9 @@
                 </change>
                 <change who="#celso" when="2024-10-10T21:41:33.432Z" type="text-version" status="1.0.8" xml:id="UT22084-087-011-112">
                     <desc>Activated pending links</desc>
+                </change>
+                <change who="#celso" when="2024-10-10T21:46:14.302Z" type="text-version" status="1.0.9" xml:id="UT22084-087-011-113">
+                    <desc>Corrected typo in bibliography</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -425,7 +428,7 @@
                     <bibl xml:id="UT22084-087-011-111">84000 Translation Team. trans. <title xml:lang="en">
                             <ref target="https://read.84000.co/translation/toh505.html">The Vaiḍūryaprabha Dhāraṇī</ref>
                         </title>, Toh 505. 84000: Translating the
-                        Words of the Buddha.</bibl>
+                        Words of the Buddha, 2024.</bibl>
                     <bibl xml:id="UT22084-087-011-33">Anonymous, trans. <title xml:lang="en">Aṣṭāṅga
                             Hṛdaya of Vāgbhaṭa: The Book of Eight Branches of Āyurveda</title>. Text
                         and English Translation, vol 1. Delhi: Sri Satguru Publications, 1999. </bibl>
@@ -437,7 +440,7 @@
                                 Mantra for Incanting Medicines, Extracted from “Destroyer of the
                                 Great Trichiliocosm”</ref>
                         </title>, Toh 1059. 84000: Translating the
-                        Words of the Buddha.</bibl>
+                        Words of the Buddha, 2023.</bibl>
                     <bibl xml:id="UT22084-087-011-35">Dalton, Jacob P. “How Dhāraṇīs WERE
                         Proto-Tantric: Liturgies, Ritual Manuals, and the Origins of the Tantras.”
                         In <title xml:lang="en">Tantric Traditions in Transmission and
