--- a/translations/kangyur/placeholders/094-021_toh744-the_tantra_of_vajrapatala.xml
+++ b/translations/kangyur/placeholders/094-021_toh744-the_tantra_of_vajrapatala.xml
@@ -11,11 +11,11 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa rdo rje sa 'og gi rgyud kyi rgyal po zhes bya ba/</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2024</date>
+                <edition>v 0.0.4 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status=""/>
+                <availability status="3"/>
                 <idno xml:id="UT22084-094-021"/>
             </publicationStmt>
             <sourceDesc>
@@ -55,6 +55,12 @@
                 </change>
                 <change who="#line-tofte" when="2024-02-26T12:10:32.161Z" type="text-version" status="0.0.3" xml:id="UT22084-094-021-10">
                     <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-11T07:36:51.219Z" type="translation-status" status="3" xml:id="UT22084-094-021-11">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-11T07:36:51.219Z" type="text-version" status="0.0.4" xml:id="UT22084-094-021-12">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
