--- a/translations/kangyur/placeholders/068-009_toh275-the_sutra_on_buddhahood.xml
+++ b/translations/kangyur/placeholders/068-009_toh275-the_sutra_on_buddhahood.xml
@@ -15,14 +15,15 @@
                 <author role="translatorEng" xml:id="UT22084-068-009-9">Khenpo Kalsang Gyaltsen</author>
                 <author role="translatorEng" xml:id="UT22084-068-009-10">Chodrungma Kunga Chodron</author>
                 <author role="translatorEng" xml:id="UT22084-068-009-11">Laura Goetz</author>
+                <editor role="projectEditor" xml:id="UT22084-068-009-23">George FitzHerbert</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.7 <date>2024</date>
+                <edition>v 0.0.9 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-068-009"/>
                 <date/>
             </publicationStmt>
@@ -64,6 +65,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2024-10-07T14:25:57.348Z" type="text-version" status="0.0.7" xml:id="UT22084-068-009-16">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-07T14:26:30.713Z" type="text-version" status="0.0.8" xml:id="UT22084-068-009-24">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-11T07:59:39.28Z" type="translation-status" status="2.h" xml:id="UT22084-068-009-25">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-11T07:59:39.28Z" type="text-version" status="0.0.9" xml:id="UT22084-068-009-26">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
