--- a/translations/kangyur/translations/091-068_toh671-the_royal_tantra_praises_to_sridevi_kali.xml
+++ b/translations/kangyur/translations/091-068_toh671-the_royal_tantra_praises_to_sridevi_kali.xml
@@ -25,7 +25,7 @@
                 <sponsor xml:id="UT22084-091-068-13">Dakki</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.0 <date>2024</date>
+                <edition>v 1.0.1 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -34,6 +34,12 @@
                     non-profit initiative to translate all the Buddha’s words into modern languages,
                     and to make them available to everyone. </publisher>
                 <availability status="1.a">
+                    <p type="tantricRestriction">
+                        <emph rend="bold">Warning:</emph> Readers are reminded that according to Vajrayāna Buddhist tradition
+                        there are restrictions and commitments concerning tantra. Practitioners who are not sure if they should
+                        read this translation are advised to consult the authorities of their lineage. The responsibility for
+                        reading this text or sharing it with others who may or may not fulfill the requirements lies in the hands
+                        of readers.</p>
                     <licence>
                         <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
                         <p>This work is provided under the protection of a Creative Commons CC
@@ -139,6 +145,9 @@
                 </change>
                 <change who="#martina-cotter" when="2024-10-09T21:45:14.257Z" type="text-version" status="1.0.0" xml:id="UT22084-091-068-360">
                     <desc>First published version.</desc>
+                </change>
+                <change who="#martina-cotter" when="2024-10-11T13:09:14.054Z" type="text-version" status="1.0.1" xml:id="UT22084-091-068-361">
+                    <desc>added tantra warning</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
