--- a/translations/kangyur/translations/091-069_toh672,1088-the_hundred_and_eight_names_of_the_goddess_kali.xml
+++ b/translations/kangyur/translations/091-069_toh672,1088-the_hundred_and_eight_names_of_the_goddess_kali.xml
@@ -24,7 +24,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-091-069-404">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.0 <date>2024</date>
+                <edition>v 1.0.1 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -33,6 +33,12 @@
                     non-profit initiative to translate all the Buddha’s words into modern languages,
                     and to make them available to everyone. </publisher>
                 <availability status="1.a">
+                    <p type="tantricRestriction">
+                        <emph rend="bold">Warning:</emph> Readers are reminded that according to Vajrayāna Buddhist tradition
+                        there are restrictions and commitments concerning tantra. Practitioners who are not sure if they should
+                        read this translation are advised to consult the authorities of their lineage. The responsibility for
+                        reading this text or sharing it with others who may or may not fulfill the requirements lies in the hands
+                        of readers.</p>
                     <licence>
                         <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
                         <p>This work is provided under the protection of a Creative Commons CC
@@ -148,6 +154,9 @@
                 </change>
                 <change who="#martina-cotter" when="2024-10-09T21:58:36.185Z" type="text-version" status="1.0.0" xml:id="UT22084-091-069-413">
                     <desc>First published version.</desc>
+                </change>
+                <change who="#martina-cotter" when="2024-10-11T13:10:57.625Z" type="text-version" status="1.0.1" xml:id="UT22084-091-069-414">
+                    <desc>added tantra warning</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
