--- a/translations/kangyur/placeholders/087-004_toh499-the_tantra_of_blueclad_vajrapani_vajrapatala.xml
+++ b/translations/kangyur/placeholders/087-004_toh499-the_tantra_of_blueclad_vajrapani_vajrapatala.xml
@@ -10,8 +10,12 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa lag na rdo rje gos sngon po can rdo rje sa 'og ces bya ba'i rgyud/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryavajrapāṇi­nīlāmbaradhara­vajrapātālanāmatantra</title>
             </titleStmt>
+            <editionStmt>
+                <edition>v 0.0.1 <date>2024</date>
+                </edition>
+            </editionStmt>
             <publicationStmt>
-                <availability status=""/>
+                <availability status="3"/>
                 <idno xml:id="UT22084-087-004"/>
             </publicationStmt>
             <sourceDesc>
@@ -30,6 +34,12 @@
             
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-087-004-1">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-14T08:41:53.611Z" type="translation-status" status="3" xml:id="UT22084-087-004-2">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-14T08:41:53.611Z" type="text-version" status="0.0.1" xml:id="UT22084-087-004-3">
+                    <desc>User set version to 0.0.1</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
