--- a/translations/kangyur/placeholders/035-021_toh44-21-chapter_21_pure_conduct.xml
+++ b/translations/kangyur/placeholders/035-021_toh44-21-chapter_21_pure_conduct.xml
@@ -9,13 +9,14 @@
                 <title type="otherTitle" xml:lang="zh">梵行品</title>
                 <author role="translatorMain" xml:id="UT22084-035-021-5">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-035-021-6">Ana Cristina Lopes</author>
+                <editor role="projectEditor" xml:id="UT22084-035-021-14">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2024</date>
+                <edition>v 0.0.8 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-035-021"/>
             </publicationStmt>
             <sourceDesc>
@@ -56,6 +57,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2024-06-14T12:53:59.871Z" type="text-version" status="0.0.6" xml:id="UT22084-035-021-11">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-14T12:54:30.804Z" type="text-version" status="0.0.7" xml:id="UT22084-035-021-15">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-14T09:21:19.289Z" type="translation-status" status="2.f" xml:id="UT22084-035-021-16">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-14T09:21:19.289Z" type="text-version" status="0.0.8" xml:id="UT22084-035-021-17">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
