--- a/translations/kangyur/placeholders/080-010_toh426-the_tantra_of_vajrarali.xml
+++ b/translations/kangyur/placeholders/080-010_toh426-the_tantra_of_vajrarali.xml
@@ -11,11 +11,11 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">Vajrāralimahātantrarājanāma</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2023</date>
+                <edition>v 0.0.2 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="4"/>
+                <availability status="3"/>
                 <idno xml:id="UT22084-080-010"/>
             </publicationStmt>
             <sourceDesc>
@@ -43,6 +43,12 @@
                 </change>
                 <change who="#admin" when="2023-12-07T15:11:22.754Z" type="text-version" status="0.0.1" xml:id="UT22084-080-010-4">
                     <desc>script-increment-version-published</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-14T10:04:02.324Z" type="translation-status" status="3" xml:id="UT22084-080-010-5">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-14T10:04:02.324Z" type="text-version" status="0.0.2" xml:id="UT22084-080-010-6">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
